# list_c

./: .gitignore  CMakeLists.txt  README.md
include/: list_c.h  single_list.h
src/: list_c.c  single_list.c
tests/: great_test.cpp  slist_bogosort.cpp  slist_clear.cpp  slist_copy.cpp  slist_front_item.cpp  test_utils.cpp
tests/utils/: test_fixtures.hpp  test_utils.hpp
